--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "tymon/jwt-auth": "^0.5.12",
+        "barryvdh/laravel-cors": "^0.8.2"
     },
     "autoload": {
         "classmap": [
